build main page

--- a/app/pages/index.html
+++ b/app/pages/index.html
@@ -1,5 +1,354 @@
 <!--=include header.html-->
 <main class="main">
+  <div class="hero">
+    <div class="container-fluid">
+      <div class="hero__inner" style="background-image: url(../images/hero.png)">
+        <div class="hero__content">
+          <h1 class="hero__title">
+            <span class="colored-text">Экологичные каркасные дома</span> от 48 дней с гарантией по договору
+          </h1>
+          <button class="btn-green">В каталог проектов</button>
+        </div>
+      </div>
+    </div>
+  </div>
 
+  <div class="project">
+    <div class="container">
+      <div class="project__inner">
+        <div class="project__head">
+          <h2 class="project__title">Выберите какой дом вы получите от 48 дней</h2>
+          <h5 class="project__subtitle">Более 18 готовых проектов</h5>
+        </div>
+
+        <div class="project__tab">
+          <div class="project__tab-item menu-1 active">Одноэтажные дома</div>
+          <div class="project__tab-item menu-1">Двухэтажные дома</div>
+        </div>
+
+        <div class="project__slider">
+          <div class="project__slider-item">
+            <div class="project__item">
+              <img src="../images/project1.png" alt="project" class="project__img">
+              <div class="project__item-body">
+                <div class="project__item-head">
+                  <h5 class="project__item-suptitle">Проект каркасого дома</h5>
+                  <h2 class="project__item-title">КД-178</h2>
+                </div>
+                <ul class="project__list">
+                  <li class="project__list-item">
+                    <img src="../images/этажи.svg" alt="etagi" class="project__list-img">
+                    <p>1 этаж</p>
+                  </li>
+                  <li class="project__list-item">
+                    <img src="../images/комнаты.svg" alt="room" class="project__list-img">
+                    <p>3 комнаты</p>
+                  </li>
+                  <li class="project__list-item">
+                    <img src="../images/метраж.svg" alt="metrazh" class="project__list-img">
+                    <p>106м</p>
+                  </li>
+                  <li class="project__list-item">
+                    <img src="../images/терасса.svg" alt="terassa" class="project__list-img">
+                    <p>Терасса 6х3м</p>
+                  </li>
+                  <li class="project__list-item">
+                    <img src="../images/площадь.svg" alt="ploshad" class="project__list-img">
+                    <p>10х16м</p>
+                  </li>
+                  <li class="project__list-item">
+                    <img src="../images/сортиры.svg" alt="wc" class="project__list-img">
+                    <p>2 санузла</p>
+                  </li>
+                </ul>
+                <div class="project__desc">
+                  <p>Роскошный двухэтажный дом в стиле «Шале» в каркасном исполнении. Этот дом идеально подходит
+                    для круглогодичного проживания, для семьи из 3–4 человек.</p>
+                </div>
+                <div class="project__btns">
+                  <button class="btn-green">Оставить заявку</button>
+                  <button class="btn-white">Что входит в постройку</button>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="project__slider-item">
+            <div class="project__item">
+              <img src="../images/project1.png" alt="project" class="project__img">
+              <div class="project__item-body">
+                <div class="project__item-head">
+                  <h5 class="project__item-suptitle">Проект каркасого дома</h5>
+                  <h2 class="project__item-title">КД-178</h2>
+                </div>
+                <ul class="project__list">
+                  <li class="project__list-item">
+                    <img src="../images/этажи.svg" alt="etagi" class="project__list-img">
+                    <p>1 этаж</p>
+                  </li>
+                  <li class="project__list-item">
+                    <img src="../images/комнаты.svg" alt="room" class="project__list-img">
+                    <p>3 комнаты</p>
+                  </li>
+                  <li class="project__list-item">
+                    <img src="../images/метраж.svg" alt="metrazh" class="project__list-img">
+                    <p>106м</p>
+                  </li>
+                  <li class="project__list-item">
+                    <img src="../images/терасса.svg" alt="terassa" class="project__list-img">
+                    <p>Терасса 6х3м</p>
+                  </li>
+                  <li class="project__list-item">
+                    <img src="../images/площадь.svg" alt="ploshad" class="project__list-img">
+                    <p>10х16м</p>
+                  </li>
+                  <li class="project__list-item">
+                    <img src="../images/сортиры.svg" alt="wc" class="project__list-img">
+                    <p>2 санузла</p>
+                  </li>
+                </ul>
+                <div class="project__desc">
+                  <p>Роскошный двухэтажный дом в стиле «Шале» в каркасном исполнении. Этот дом идеально подходит
+                    для круглогодичного проживания, для семьи из 3–4 человек.</p>
+                </div>
+                <div class="project__btns">
+                  <button class="btn-green">Оставить заявку</button>
+                  <button class="btn-white">Что входит в постройку</button>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="project__slider-item">
+            <div class="project__item">
+              <img src="../images/project1.png" alt="project" class="project__img">
+              <div class="project__item-body">
+                <div class="project__item-head">
+                  <h5 class="project__item-suptitle">Проект каркасого дома</h5>
+                  <h2 class="project__item-title">КД-178</h2>
+                </div>
+                <ul class="project__list">
+                  <li class="project__list-item">
+                    <img src="../images/этажи.svg" alt="etagi" class="project__list-img">
+                    <p>1 этаж</p>
+                  </li>
+                  <li class="project__list-item">
+                    <img src="../images/комнаты.svg" alt="room" class="project__list-img">
+                    <p>3 комнаты</p>
+                  </li>
+                  <li class="project__list-item">
+                    <img src="../images/метраж.svg" alt="metrazh" class="project__list-img">
+                    <p>106м</p>
+                  </li>
+                  <li class="project__list-item">
+                    <img src="../images/терасса.svg" alt="terassa" class="project__list-img">
+                    <p>Терасса 6х3м</p>
+                  </li>
+                  <li class="project__list-item">
+                    <img src="../images/площадь.svg" alt="ploshad" class="project__list-img">
+                    <p>10х16м</p>
+                  </li>
+                  <li class="project__list-item">
+                    <img src="../images/сортиры.svg" alt="wc" class="project__list-img">
+                    <p>2 санузла</p>
+                  </li>
+                </ul>
+                <div class="project__desc">
+                  <p>Роскошный двухэтажный дом в стиле «Шале» в каркасном исполнении. Этот дом идеально подходит
+                    для круглогодичного проживания, для семьи из 3–4 человек.</p>
+                </div>
+                <div class="project__btns">
+                  <button class="btn-green">Оставить заявку</button>
+                  <button class="btn-white">Что входит в постройку</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="calculation">
+    <div class="container">
+      <div class="calculation__inner">
+        <h2 class="calculation__title">Индивидуальный расчет стоимости вашего дома</h2>
+        <h5 class="calculation__suptitle">Вы можете заказать каркасный дом в одной из 4-х комплектаций.</h5>
+
+        <div class="calculation__body">
+          <img src="../images/calculation.png" alt="calculation" class="calculation__img">
+
+          <div class="calculation__content">
+            <h3 class="calculation__content-title">Расчет стоимости дома</h3>
+            <p class="calculation__content-text">Укажите подходящие вам параметры и получите расчет. Подробный расчет с
+              актуальными ценами вы можете получить у наших консультантов</p>
+            <div class="calculation__tab">
+              <div class="calculation__tab-item">
+                <h6 class="menu-1">Эконом</h6>
+              </div>
+              <div class="calculation__tab-item active">
+                <h6 class="menu-1">Базовая</h6>
+              </div>
+              <div class="calculation__tab-item">
+                <h6 class="menu-1">Стандарт</h6>
+              </div>
+              <div class="calculation__tab-item">
+                <h6 class="menu-1">Премиум</h6>
+              </div>
+            </div>
+            <div class="calculation__desc">
+              <div class="calculation__desc-item">
+                <h6 class="small">Толщина стоек</h6>
+                <h6 class="small">45х95 мм</h6>
+              </div>
+              <div class="calculation__desc-item">
+                <h6 class="small">Утепление</h6>
+                <h6 class="small">45х95 мм</h6>
+              </div>
+              <div class="calculation__desc-item">
+                <h6 class="small">Кровля</h6>
+                <h6 class="small">Металлочерепица 0,45 микрон/Ондулин</h6>
+              </div>
+              <div class="calculation__desc-gift">
+                <img src="" alt="" class="calculation__desc--icon">
+                <h6 class="small">При заказе дома в базовой комплектации вы получите в подарок <span
+                    class="colored-text">«Входную дверь»</span></h6>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="banner">
+    <div class="container">
+      <div class="banner__inner" style="background-image: url(../images/banner-texture.png);">
+        <div class="banner__item">
+          <h5 class="banner__suptitle">Успей подписать договор до конца февраля и получи</h5>
+          <h2 class="banner__title">Индивидуальный проект дома</h2>
+        </div>
+        <div class="banner__item">
+          <img class="banner__img" src="../images/ribbon.png" alt="">
+          <h2 class="banner__item-title">БЕСПЛАТНО</h2>
+          <button class="btn-green banner__item-btn">Получить проект дома</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="advantages">
+    <div class="container">
+      <div class="advantages__inner">
+        <h2 class="advantages__title">Работа с нами это</h2>
+        <h5 class="advantages__suptitle">Не только гарантированное качество услуги и материалов, но и такие моменты как
+        </h5>
+
+        <div class="advantages__block">
+          <img class="advantages__img" src="../images/advantages-cover1.png" alt="cover">
+
+          <ul class="advantages__list">
+            <li class="advantages__item">
+              <img class="advantages__item-img" src="../images/advantages1.svg" alt="icon">
+              <div class="advantages__item-body">
+                <h3 class="advantages__item-title">Фиксированная стоимость</h3>
+                <p class="advantages__item-text">При подписании договора формируется окончательная стоимость дома
+                  и она не меняется до завершения работ и сдачи объекта</p>
+              </div>
+            </li>
+            <li class="advantages__item">
+              <img class="advantages__item-img" src="../images/advantages2.svg" alt="icon">
+              <div class="advantages__item-body">
+                <h3 class="advantages__item-title">Личный кабинет и видеонаблюдение</h3>
+                <p class="advantages__item-text">На объекте установлена видео-камера и вы в любое время можете наблюдать
+                  строительный процесс</p>
+              </div>
+            </li>
+            <li class="advantages__item">
+              <img class="advantages__item-img" src="../images/advantages3.svg" alt="icon">
+              <div class="advantages__item-body">
+                <h3 class="advantages__item-title">Доставка включена</h3>
+                <p class="advantages__item-text">Доставка всех материалов для строительства каркасного дома входит
+                  в стоимость м² каждой комплектации.</p>
+              </div>
+            </li>
+          </ul>
+        </div>
+
+        <div class="advantages__block">
+          <ul class="advantages__list">
+            <li class="advantages__item">
+              <img class="advantages__item-img" src="../images/advantages4.svg" alt="icon">
+              <div class="advantages__item-body">
+                <h3 class="advantages__item-title">Поэтапная оплата</h3>
+                <p class="advantages__item-text">Вы можете оплачивать строительство и закупку материалов поэтапно,
+                  согласно графика выполнения работ и закупок материалов</p>
+              </div>
+            </li>
+            <li class="advantages__item">
+              <img class="advantages__item-img" src="../images/advantages5.svg" alt="icon">
+              <div class="advantages__item-body">
+                <h3 class="advantages__item-title">Используем дерево камерной сушки</h3>
+                <p class="advantages__item-text">Усадка такого пиломатериала, практически отсутствует, вес уменьшается
+                  примерно на треть , прочность материала выше, соединения прочнее.</p>
+              </div>
+            </li>
+            <li class="advantages__item">
+              <img class="advantages__item-img" src="../images/advantages6.svg" alt="icon">
+              <div class="advantages__item-body">
+                <h3 class="advantages__item-title">Специалисты своего дела</h3>
+                <p class="advantages__item-text">Для вас мы постоянно повышаем квалификацию наших строителей, каждый
+                  квартал проводятся курсы и переаттестация.</p>
+              </div>
+            </li>
+          </ul>
+
+          <img src="../images/advantages-cover2.png" alt="cover" class="advantages__img">
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="payment">
+    <div class="container">
+      <div class="payment__inner">
+        <h2 class="payment__title">Варианты оплаты</h2>
+        <h5 class="payment__suptitle">Совершать оплаты за свой дом легко и просто мы предоставляем множество современных
+          и удобных способов.</h5>
+
+        <ul class="payment__list">
+          <li class="payment__item">
+            <img src="../images/payment1.svg" alt="payment" class="payment__item-img">
+            <p class="payment__item-title">Поэтапная оплата</p>
+            <p class="payment__item-text">Мы предлагаем поэтапную оплату для вашего удобства</p>
+          </li>
+          <li class="payment__item">
+            <img src="../images/payment2.svg" alt="payment" class="payment__item-img">
+            <p class="payment__item-title">Сотрудничество с банком</p>
+            <p class="payment__item-text">Для физических лиц доступен банковский перевод по реквизитам</p>
+          </li>
+          <li class="payment__item">
+            <img src="../images/payment3.svg" alt="payment" class="payment__item-img">
+            <p class="payment__item-title">Дом в ипотеку</p>
+            <p class="payment__item-text">Начните строительство собственного дома, не дожидаясь необходимого объема
+              накоплений</p>
+          </li>
+          <li class="payment__item">
+            <img src="../images/payment4.svg" alt="payment" class="payment__item-img">
+            <p class="payment__item-title">Материнский капитал</p>
+            <p class="payment__item-text">Владельцы маткапитала имеют право тратить его на строительство дома</p>
+          </li>
+        </ul>
+
+        <button class="btn-white">Условия оплаты подробнее</button>
+      </div>
+    </div>
+  </div>
+
+  <div class="map">
+    <div class="conatiner">
+      <div class="map__inner">
+        
+      </div>
+    </div>
+  </div>
 </main>
 <!--=include footer.html-->
