1920 screen main page done

--- a/app/pages/index.html
+++ b/app/pages/index.html
@@ -3,12 +3,12 @@
 <main class="main">
   <div class="hero">
     <div class="container-fluid">
-      <div class="hero__inner" style="background-image: url(images/bg-var2.png)">
+      <div class="hero__inner" style="background-image: url(images/hero.png)">
         <div class="hero__content">
           <h1 class="hero__title">
             <span class="colored-text">Экологичные каркасные дома</span> от 48 дней с гарантией по договору
           </h1>
-          <button class="btn-green">В каталог проектов</button>
+          <button class="btn-green menu-1">В каталог проектов</button>
         </div>
       </div>
     </div>
@@ -430,7 +430,7 @@
         <div class="banner__item">
           <img class="banner__img" src="images/ribbon.png" alt="">
           <h2 class="banner__item-title">БЕСПЛАТНО</h2>
-          <button class="btn-green banner__item-btn">Получить проект дома</button>
+          <button class="btn-green banner__item-btn menu-2">Получить проект дома</button>
         </div>
       </div>
     </div>
@@ -439,9 +439,11 @@
   <div class="advantages">
     <div class="container">
       <div class="advantages__inner">
-        <h2 class="advantages__title">Работа с нами это</h2>
-        <h5 class="advantages__suptitle">Не только гарантированное качество услуги и материалов, но и такие моменты как
-        </h5>
+        <div class="advantages__head">
+          <h2 class="advantages__title">Работа с нами это</h2>
+          <h5 class="advantages__suptitle">Не только гарантированное качество услуги и материалов, но и такие моменты как
+          </h5>
+        </div>
 
         <div class="advantages__block">
           <img class="advantages__img" src="images/advantages-cover1.png" alt="cover">
