fix calculation block

--- a/app/pages/index.html
+++ b/app/pages/index.html
@@ -327,14 +327,16 @@
     <img class="decor" src="images/decor.png" alt="">
     <div class="container">
       <div class="calculation__inner">
-        <h2 class="calculation__title">Индивидуальный расчет стоимости вашего дома</h2>
-        <h5 class="calculation__suptitle">Вы можете заказать каркасный дом в одной из 4-х комплектаций.</h5>
+        <div class="calculation__head">
+          <h2 class="calculation__title">Индивидуальный расчет стоимости вашего дома</h2>
+          <h5 class="calculation__suptitle">Вы можете заказать каркасный дом в одной из 4-х комплектаций.</h5>
+        </div>
 
         <div class="calculation__body">
           <picture class="calculation__img">
-            <source media="(min-width: 769px)" srcset="../images/calculation.png">
-            <source media="(max-width: 768px)" srcset="../images/calculation-mobile.png">
-            <img src="../images/calculation.png" alt="" loading="lazy">
+            <source media="(min-width: 769px)" srcset="images/calculation.png">
+            <source media="(max-width: 768px)" srcset="images/calculation-mobile.png">
+            <img src="images/calculation.png" alt="" loading="lazy">
           </picture>
 
           <div class="calculation__content">
